# langgraph-task-agent

./: README.md  main.py  pyproject.toml  requirements.txt  task_agent.db
chroma.db/: chroma.sqlite3
src/app/: agent.py  database.py  main.py  prompts.py  repository.py  schemas.py  service.py  tools.py
src/static/: index.html
